remove debug + lib + matrix cleaning + refactor

--- a/iupacpal-rust/Cargo.toml
+++ b/iupacpal-rust/Cargo.toml
@@ -3,6 +3,10 @@ name = "iupacpal"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+name = "lib"
+path = "src/lib.rs"
+
 [dependencies]
 anyhow = "1.0.75"
 libdivsufsort-rs = "0.1.2"
