--- a/iupacpal-rust/.github/workflows/release.yml
+++ b/iupacpal-rust/.github/workflows/release.yml
@@ -13,7 +13,11 @@ jobs:
       matrix:
         target: [x86_64-pc-windows-gnu, x86_64-unknown-linux-musl]
     steps:
-      - uses: actions/checkout@master
+      - name: Checkout repository
+        uses: actions/checkout@v2
+        with:
+          path: /iupacpal-rust
+
       - name: Compile and release
         uses: rust-build/rust-build.action@v1.4.3
         env:
