--- a/iupacpal-rust/.github/workflows/release.yml
+++ b/iupacpal-rust/.github/workflows/release.yml
@@ -25,3 +25,4 @@ jobs:
         with:
           RUSTTARGET: ${{ matrix.target }}
           TOOLCHAIN_VERSION: nightly 
+          SRC_DIR: /iupacpal-rust
