--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,20 @@
 [package]
 name = "iupacpal"
+default-run = "main"
 version = "0.1.0"
 edition = "2021"
 
 [lib]
 name = "iupacpal"
 path = "src/lib.rs"
+
+[[bin]]
+name = "main"
+path = "src/main.rs"
+
+[[bin]]
+name = "bench"
+path = "src/bench.rs"
 
 [dependencies]
 anyhow = "1.0.75"
@@ -14,6 +23,7 @@ linked-list = "0.0.3"
 clap = { version = "4.4.12", features = ["derive"] }
 seq_io = "0.3.2"
 elapsed-time = "0.1.1"
+rand = "0.8.5"
 
 # [profile.dev]
 # opt-level = 3
