rename the binary to iupacpal + bugfix

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,16 +1,12 @@
 [package]
 name = "iupacpal"
-default-run = "main"
+default-run = "iupacpal"
 version = "0.1.0"
 edition = "2021"
 
 [lib]
 name = "iupacpal"
 path = "src/lib.rs"
-
-[[bin]]
-name = "main"
-path = "src/main.rs"
 
 [[bin]]
 name = "bench"
