--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,6 @@ path = "bench/logs.rs"
 
 [dependencies]
 anyhow = "1.0.75"
-libdivsufsort-rs = "0.1.2"
 linked-list = "0.0.3"
 clap = { version = "4.4.12", features = ["derive"] }
 seq_io = "0.3.2"
@@ -27,6 +26,7 @@ rand = "0.8.5"
 csv = "1.1"
 itertools = "0.12.1"
 rayon = "1.8.1"
+divsufsort = "2.0.0"
 
 # [profile.dev]
 # opt-level = 3
