--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,16 +17,16 @@ name = "logs"
 path = "bench/logs.rs"
 
 [dependencies]
-anyhow = "1.0.75"
-linked-list = "0.0.3"
+anyhow = "1.0"
+divsufsort = "2.0.0"
 clap = { version = "4.4.12", features = ["derive"] }
-seq_io = "0.3.2"
 elapsed-time = "0.1.1"
+rayon = "1.8.1"
+# This should only be applied to bench && logs
+seq_io = "0.3.2"
 rand = "0.8.5"
 csv = "1.1"
 itertools = "0.12.1"
-rayon = "1.8.1"
-divsufsort = "2.0.0"
 
 # [profile.dev]
 # opt-level = 3
