--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,25 +8,15 @@ edition = "2021"
 name = "iupacpal"
 path = "src/lib.rs"
 
-[[bin]]
-name = "bench"
-path = "bench/bench.rs"
-
-[[bin]]
-name = "logs"
-path = "bench/logs.rs"
+[workspace]
+members = [".", "bench"]
 
 [dependencies]
 anyhow = "1.0"
 divsufsort = "2.0.0"
 clap = { version = "4.4.12", features = ["derive"] }
 elapsed-time = "0.1.1"
-rayon = "1.8.1"
-# This should only be applied to bench && logs
 seq_io = "0.3.2"
-rand = "0.8.5"
-csv = "1.1"
-itertools = "0.12.1"
 
 # [profile.dev]
 # opt-level = 3
