--- a/bench/Cargo.toml
+++ b/bench/Cargo.toml
@@ -18,3 +18,4 @@ iupacpal = { path = ".." }
 rand = "0.8.5"
 csv = "1.1"
 itertools = "0.12.1"
+clap = { version = "4.4.12", features = ["derive"] }
