Prepare rename to `iirs`

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "iupacpal"
-default-run = "iupacpal"
+name = "iirs"
+default-run = "iirs"
 version = "0.1.0"
 edition = "2021"
 
 [lib]
-name = "iupacpal"
+name = "iirs"
 path = "src/lib.rs"
 
 [workspace]
