--- a/bench/Cargo.toml
+++ b/bench/Cargo.toml
@@ -13,7 +13,7 @@ path = "logs.rs"
 
 [dependencies]
 anyhow = "1.0"
-iupacpal = { path = ".." }
+iirs = { path = ".." }
 rand = "0.8.5"
 csv = "1.1"
 itertools = "0.12.1"
