--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,8 @@ name = "iirs"
 default-run = "iirs"
 version = "0.9.0"
 edition = "2021"
-licence = "GPL3"
+license = "GPL-3.0"
+license-file = "LICENSE"
 readme = "README.md"
 description = "Inverted repeats finder"
 keywords = [
