--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ rayon = { version = "1.8.1", optional = true }
 [features]
 default = []
 parallel = ["rayon"]
+tabulation = []
 
 # [profile.dev]
 # opt-level = 3
